# Hra

./: CMakeLists.txt  README.md
config/: game_params.yaml
include/vacuum_game/core/: Environment.h  Lidar.h  ObjectFactory.hpp  Robot.h  WorldObject.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vacuum_game/lib/vacuum_game/: game_node
install/vacuum_game/share/ament_index/resource_index/parent_prefix_path/: vacuum_game
install/vacuum_game/share/vacuum_game/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_game/share/vacuum_game/cmake/: vacuum_gameConfig.cmake
log/: latest_build
media/: Nastavenia.webm
src/core/: Environment.cpp  Lidar.cpp  Robot.cpp
src/nodes/: GameNode.cpp  VacuumNode.cpp  VisualizationNode.cpp
